# ndarray

./: .gitignore  .php-cs-fixer.php  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NDARRAY_RUST_QUICKSTART.md  OPTIMIZATION_SUMMARY.md  README.md  SPEC.md  bug_report.md  composer.json  package-lock.json  package.json  phpstan.dist.neon  phpunit.xml  platforms.yml  test.php  test_ffi.php
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: dtype.rs  error.rs  lib.rs
rust/src/core/: array_data.rs  comparison_helpers.rs  error.rs  handle.rs  macros.rs  math_helpers.rs  mod.rs  op_helpers.rs  view_helpers.rs  wrapper.rs
rust/src/core/macros/: binary_op_arithmetic.rs  binary_op_bitwise.rs  binary_op_comparison.rs  binary_op_logical.rs  broadcast_binary.rs  core_macros.rs  ffi_guard.rs  mod.rs  scalar_op_arithmetic.rs  scalar_op_bitwise.rs  scalar_op_comparison.rs  view.rs
rust/src/ffi/: arithmetic.rs  cast.rs  create.rs  data.rs  generators.rs  indexing.rs  metadata.rs  mod.rs  output_meta.rs  properties.rs  serialize.rs  serialize_helpers.rs  to_string.rs  types.rs
rust/src/ffi/arithmetic/: abs.rs  acos.rs  add.rs  asin.rs  atan.rs  cbrt.rs  ceil.rs  clamp.rs  cos.rs  cosh.rs  div.rs  exp.rs  exp2.rs  floor.rs  helpers.rs  hypot.rs  ln.rs  ln_1p.rs  log.rs  log10.rs  log2.rs  maximum.rs  minimum.rs  minmax.rs  mod.rs  mul.rs  pow2.rs  powf.rs  powi.rs  recip.rs  rem.rs  round.rs  signum.rs  (+8 more)
rust/src/helpers/: elementwise_minmax.rs  error.rs  fft_utils.rs  indexing.rs  linalg_dtype.rs  mod.rs  output.rs  scalar.rs  validation.rs  view.rs
rust/src/macros/: binary_op_arithmetic.rs  binary_op_bitwise.rs  binary_op_comparison.rs  binary_op_logical.rs  broadcast_binary.rs  core_macros.rs  ffi_guard.rs  mod.rs  scalar_op_arithmetic.rs  scalar_op_bitwise.rs  scalar_op_comparison.rs  view.rs
rust/src/types/: array_data.rs  dtype.rs  handle.rs  metadata.rs  mod.rs  pad_mode.rs  sort_kind.rs  wrapper.rs
rust/tests/: ndarray_verification.rs  view_strides_test.rs
(+334 files in other folders)
