[package]
name = "ndarray_php"
version = "0.1.0"
edition = "2021"

[lib]
name = "ndarray_php"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.17.2", features = ["std"] }
parking_lot = "0.12"
rand = "0.10.0"
rand_distr = "0.6.0"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
# For testing

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
