[package]
name = "ndarray-php"
version = "1.0.0"
edition = "2021"
authors = ["Kyrian Obikwelu"]
license = "MIT"
repository = "https://github.com/phpmlkit/ndarray"
description = "Core types and FFI layer for NDArray PHP"

[lib]
name = "ndarray_php"
crate-type = ["cdylib", "rlib"]

[features]
default = ["ffi"]
ffi = []

[dependencies]
ndarray = { version = "0.17.2", features = ["std", "blas"] }
ndrustfft = "0.6"
num-complex = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
rand = "0.10.0"
rand_distr = "0.6.0"

[target.'cfg(unix)'.dependencies]
ndarray-linalg = { version = "0.18", default-features = false, features = ["openblas-static"] }

[target.'cfg(windows)'.dependencies]
ndarray-linalg = { version = "0.18", default-features = false, features = ["intel-mkl-static-lp64-seq"] }

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
